[package]
name = "hn-stories"
version = "0.1.0"
edition = "2024"
description = "A command line interface to browse and open Hacker News stories from the terminal."
categories = ["command-line-interface", "utilities", "news"]
keywords = [
  "hacker-news",
  "hn-cli",
  "terminal-ui",
  "cli"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/brysonbw/hn-stories"
repository = "https://github.com/brysonbw/hn-stories"
authors = ["Bryson Ward"]
documentation = "https://docs.rs/hn-stories"
include = ["src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
async-trait = "0.1.89"
chroma-print = "1.0.0"
clap = { version = "4.5.54", features = ["derive"] }
dialoguer = "0.12.0"
futures = "0.3.32"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
webbrowser = "1.1.0"

[dev-dependencies]
mockall = "0.14.0"

[package.metadata.release]
commit_message = "chore(release): version {{version}}"

[profile.test]
opt-level = 1

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

